--- a/index.html
+++ b/index.html
@@ -5,6 +5,39 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Mahfujur Rahman Portfolio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,400;0,500;0,700;0,800;1,400&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./css/style.css" />
   </head>
-  <body></body>
+  <body>
+    <!-- Banner section start -->
+    <section class="top-banner">
+      <!-- Banner left aside start -->
+      <div class="upper">
+        <h1>Welcome to</h1>
+        <h1><span class="name">Mahfujur Rahman</span> World</h1>
+        <p>
+          Hello, You might show me to play Cricket, Football, Vollyball, Chess
+          etc. Lorem ipsum dolor sit amet consectetur adipisicing elit.
+          Explicabo earum voluptatem nisi. Explicabo commodi temporibus
+          veritatis magni, officiis est quos!
+        </p>
+        <a
+          target="_blank"
+          class="link-btn"
+          href="https://www.linkedin.com/in/mahfujur-rahman-24a4a717a/"
+          >Hire Me</a
+        >
+      </div>
+      <!-- Banner left aside end -->
+      <div class="upper">
+        <img src="./images/banner_image.png" alt="#" />
+      </div>
+    </section>
+    <!-- banner sectin end -->
+  </body>
 </html>
