--- a/index.html
+++ b/index.html
@@ -15,16 +15,18 @@
   </head>
   <body>
     <!-- Banner section start -->
-    <section class="top-banner">
+    <section class="top-banner shared">
       <!-- Banner left aside start -->
       <div class="upper">
         <h1>Welcome to</h1>
         <h1><span class="name">Mahfujur Rahman</span> World</h1>
+        <h2>Become a good Athelater</h2>
         <p>
           Hello, You might show me to play Cricket, Football, Vollyball, Chess
           etc. Lorem ipsum dolor sit amet consectetur adipisicing elit.
           Explicabo earum voluptatem nisi. Explicabo commodi temporibus
-          veritatis magni, officiis est quos!
+          veritatis magni, officiis est quos! Lorem ipsum dolor sit amet
+          consectetur, adipisicing elit. Placeat, molestiae.
         </p>
         <a
           target="_blank"
@@ -39,5 +41,64 @@
       </div>
     </section>
     <!-- banner sectin end -->
+    <!-- mid section start -->
+    <section class="aside-banner shared">
+      <div class="upper">
+        <img src="./images/another_image.png" alt="#" />
+      </div>
+      <div class="upper">
+        <h3>Dream Big</h3>
+        <h4>Okeay Let's Start</h4>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fuga, quas
+          possimus dicta veritatis minus optio architecto voluptatum voluptates
+          iure, illum facilis sed a ipsa. Impedit vel quisquam modi corrupti
+          architecto. Provident aut nemo inventore ratione architecto doloremque
+          sit nulla, ipsam facilis quae eaque nisi enim deleniti. Quia
+          voluptates sint vitae.
+        </p>
+        <a
+          target="_blank"
+          class="link-btn"
+          href="https://www.linkedin.com/in/mahfujur-rahman-24a4a717a/"
+          >Download resume</a
+        >
+      </div>
+    </section>
+    <!-- mid section end -->
+
+    <!-- Experience section start -->
+    <section class="Experience">
+      <h2>Experience</h2>
+      <div class="parrent shared">
+        <div class="child border1">
+          <h3>Full Stack Web devloper</h3>
+          <h4>2021 - present | Pro devloper</h4>
+          <p>
+            I am the master of HTML, CSS and Javascript. I know everything
+            needed to make a website function, efficient. I didn't stop with the
+            web. I went beyond with most popular Javascript framework called Vue
+            JS. I even know the deployment, server and security. I will give you
+            100% web solution.
+          </p>
+        </div>
+        <div class="child border2">
+          <h3>Baby Web Developer</h3>
+          <h4>2020-2021 | Programming Hero Learner</h4>
+          <p>
+            They didn't offer me a job. But I made myself as a remove web
+            developer. I made their website and showed it to them. They liked
+            it. And uploaded the content. It was fun working at Programming
+            Hero.
+          </p>
+        </div>
+      </div>
+    </section>
+    <!-- Experience section end -->
+    <!-- footer start -->
+    <footer>
+      <p>&copy Devloper Mahfujur Rahman, CSE HSTU</p>
+    </footer>
+    <!-- footer end -->
   </body>
 </html>
